# gatekeeper

./: .dockerignore  .env.canary.example  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.canary.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  smoke_test.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  pypi.yml  release.yml
docs/: AGENT_ERRORS.md  AGENT_TESTING.md  API_REFERENCE.md  ARCHITECTURE.md  MCP_SETUP_AGENT.md  MCP_SETUP_HUMAN.md  MODULE_DEVELOPMENT.md  PODMAN_DEPLOYMENT.md  POLICY_REFERENCE.md  ROUTES.md  SETUP.md  UPGRADING.md  drive-files-update-default-on.md
docs/plans/: 2025-05-12-gatekeeper-v1.md
docs/research/: agent-documentation-audit.md  drive-files-update-404-research.md  header-auth-tool-calls-research.md
gatekeeper/: __init__.py  auth.py  config.py  db.py  encryption.py  format.py  google_client.py  logging.py  main.py  models.py  policy.py  service.py
gatekeeper/admin/: models.py  routes.py
gatekeeper/admin/ui/: __init__.py
gatekeeper/admin/ui/static/: style.css
gatekeeper/admin/ui/templates/: api_keys.html  audit_log.html  auth_status.html  base.html  dashboard.html  modules.html  routes.html
gatekeeper/api/: proxy.py  router.py
gatekeeper/mcp_server/: __init__.py  transport.py
gatekeeper/modules/: __init__.py  base.py  route.py
gatekeeper/modules/appsscript/: __init__.py
gatekeeper/modules/calendar/: __init__.py
gatekeeper/modules/drive/: __init__.py
gatekeeper/modules/forms/: __init__.py
gatekeeper/modules/gmail/: __init__.py
research/: drive-module-expansion-validation-brief.md  sheets-docs-slides-integration-brief.md
scripts/: generate_routes_doc.py  set_version.py
scripts/ci/: version-drift-check.sh
specs/: agent-documentation-completion-spec.md  drive-files-update-404-fix-spec.md  mcp-header-auth-spec.md  recovery-sheets-docs-slides-routes-spec.md
tests/: conftest.py  test_admin_api.py  test_all_routes_url_construction.py  test_api.py  test_auth.py  test_config.py  test_db.py  test_drive_workspace_routes.py  test_format.py  test_google_client.py  test_mcp.py  test_mcp_auth.py  test_modules.py  test_policy.py  test_proxy.py  test_proxy_e2e.py  test_proxy_url_hosts.py  test_service.py
tools/: bump-version.py
