[project]
name = "aigatekeeper"
dynamic = ["version"]
description = "Policy gateway for Google Workspace APIs with MCP server integration"
readme = "README.md"
license = "MIT"
authors = [{ name = "Brimdor" }]
requires-python = ">=3.11"
keywords = ["google", "gateway", "policy", "mcp", "drive", "gmail", "calendar", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.127",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/brimdor/gatekeeper"
Repository = "https://github.com/brimdor/gatekeeper"
Issues = "https://github.com/brimdor/gatekeeper/issues"

[project.scripts]
gatekeeper = "gatekeeper.main:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["gatekeeper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]